[gd_scene load_steps=6 format=3 uid="uid://bosh2dloxdoxe"]

[ext_resource type="Script" path="res://src/scripts/main.gd" id="1_yh1oj"]
[ext_resource type="Texture2D" uid="uid://ddty1wb8kdh7p" path="res://assets/Flappy Bird Assets/Background/Background5.png" id="2_ivgyy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4jhtl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_van10"]
bg_color = Color(0, 0, 0, 0.180392)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6uc0t"]
size = Vector2(1330, 20)

[node name="Main" type="Node"]
script = ExtResource("1_yh1oj")

[node name="Parallax2D" type="Parallax2D" parent="."]
repeat_size = Vector2(1187.33, 0)
autoscroll = Vector2(-15, 0)

[node name="Sprite2D" type="Sprite2D" parent="Parallax2D"]
position = Vector2(573, 325)
scale = Vector2(4.64, 2.76)
texture = ExtResource("2_ivgyy")

[node name="SpawnMarker" type="Marker2D" parent="."]
position = Vector2(1308, 0)

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-267, 297)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(1, 63.44)
shape = SubResource("RectangleShape2D_4jhtl")

[node name="Spawn Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -48.675
offset_right = -16.675
offset_bottom = 77.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 56
theme_override_styles/normal = SubResource("StyleBoxFlat_van10")
text = "0"
horizontal_alignment = 2

[node name="Deathbox" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deathbox"]
position = Vector2(582, -51)
shape = SubResource("RectangleShape2D_6uc0t")

[node name="Deathbox2" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deathbox2"]
position = Vector2(591, 692)
shape = SubResource("RectangleShape2D_6uc0t")

[connection signal="area_entered" from="Area2D" to="." method="_on_destruction_box_hit"]
[connection signal="timeout" from="Spawn Timer" to="." method="_on_spawn_timer_timeout"]
[connection signal="body_entered" from="Deathbox" to="." method="_on_deathbox_body_entered"]
[connection signal="body_entered" from="Deathbox2" to="." method="_on_deathbox_body_entered"]
